--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'pybo/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pybo/css/bootstrap.css' %}">
     <!-- pybo CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'pybo/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pybo/css/style.css' %}">
 
     <title>Hello, pybo!</title>
 </head>
@@ -20,9 +20,9 @@
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 <!-- jQuery JS -->
-<script src="{% static 'jquery-3.4.1.min.js' %}"></script>
+<script src="{% static 'pybo/js/jquery-3.6.0.min.js' %}"></script>
 <!-- Bootstrap JS -->
-<script src="{% static 'bootstrap.min.js' %}"></script>
+<script src="{% static 'pybo/js/bootstrap.min.js' %}"></script>
 <!-- 자바스크립트 Start -->
 {% block script %}
 {% endblock %}
