--- a/templates/pybo/Profile.html
+++ b/templates/pybo/Profile.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My profile</title>
-    <link rel="stylesheet" href="{% static 'pybo/profile.css' %}">
+    <link rel="stylesheet" href="{% static 'pybo/css/profile.css' %}">
 </head>
 <body>
     <div id="container">
@@ -28,7 +28,7 @@
             </div>
             <div class="content">
                 <div class="photo">
-                    <img src="{% static 'pybo/IMG_02.jpg' %}" alt="컵">
+                    <img src="{% static 'pybo/images/IMG_02.jpg' %}" alt="컵">
                 </div>
                 <div class="text">
                     <p>저는 인천 부평구에 살고 있어요.</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="content">
                 <div class="photo">
-                    <img src="{% static 'pybo/KangKoo.png' %}" alt="컵">
+                    <img src="{% static 'pybo/images/KangKoo.png' %}" alt="컵">
                 </div>
                 <div class="text">
                     <p>☞ 작품을 클릭하면 사이트로 이동합니다.</p>
