--- a/templates/pybo/index.html
+++ b/templates/pybo/index.html
@@ -5,16 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'pybo/bootstrap.css' %}">
-    <script src="{% static 'pybo/watch.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'pybo/index.css' %}">
+    <link rel="stylesheet" href="{% static 'pybo/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'pybo/css/index.css' %}">
     <title>Welcome PyWeb</title>
 </head>
 <body>
     <div class="container">
         <div class="text-center">
             <div class="logo">
-              <img src="{% static 'pybo/KangKoo_white.png'%}" alt="">
+              <img src="{% static 'pybo/images/KangKoo_white.png'%}" alt="">
             </div>
 
             <span><a href="{% url 'pybo:board' %}">ENTER SITE</a></span>
@@ -24,9 +23,9 @@
 
 
 <!-- jQuery JS -->
-<script src="{% static 'jquery-3.4.1.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 <!-- Bootstrap JS -->
-<script src="{% static 'bootstrap.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 <!-- 자바스크립트 Start -->
 {% block script %}
 {% endblock %}
